# server/dao/groups-dao.js
@@ -7,26 +7,41 @@ const rowMapper = row => {
     }
 };
 
+const userLinkRowMapper = row => {
+    return {
+        id: row.id,
+        userId: row.user_id,
+        groupId: row.group_id,
+        locationsKey: row.locations_key,
+        placesKey: row.places_key
+    }
+}
+
 class GroupDao {
     getGroups(ids) {
         return database
-            .query('SELECT id, group_name FROM location_tracker.groups WHERE id IN (' +
-                ids.map((id, idx) => `$${idx + 1}`).join(',') +
+            .query('SELECT id, group_name FROM location_tracker.groups' +
+                ' WHERE id IN (' +
+                ids.map((_, idx) => `$${idx + 1}`).join(',') +
                 ')', ids)
             .then(res => res.rows.map(rowMapper));
     }
 
-    async createGroup(name, userId, locationKey, placesKey) {
+    async createGroup(name, userId, locationsKey, placesKey) {
         return await runInTransaction(async (client) => {
             const group = await client
                 .query('INSERT INTO location_tracker.groups(group_name) VALUES ($1) RETURNING *', [name])
                 .then(res => rowMapper(res.rows[0]));
 
-            await client
-                .query('INSERT INTO location_tracker.user_group_links(user_id, group_id, location_key, places_key) VALUES ($1,$2,$3,$4) RETURNING *',
-                    [userId, group.id, locationKey, placesKey]);
+            const userLink = await client
+                .query('INSERT INTO location_tracker.user_group_links(user_id, group_id, locations_key, places_key) VALUES ($1,$2,$3,$4) RETURNING *',
+                    [userId, group.id, locationsKey, placesKey])
+                .then(res => userLinkRowMapper(res.rows[0]));
 
-            return group;
+            return {
+                ...group,
+                users: [userLink]
+            };
         });
     }
 
